--- a/MediaBrowser.WebDashboard/dashboard-ui/css/librarymenu.css
+++ b/MediaBrowser.WebDashboard/dashboard-ui/css/librarymenu.css
@@ -259,14 +259,14 @@
 @media all and (min-width: 800px) {
 
     .dashboardDocument .dashboardMenuButton {
-        display: none;
+        display: none !important;
     }
 }
 
 @media all and (max-width: 800px) {
 
     .dashboardDocument .libraryMenuButton {
-        display: none;
+        display: none !important;
     }
 }
 
@@ -282,10 +282,10 @@
 
     /* They can use the left menu */
     .dashboardEntryHeaderButton {
-        display: none;
+        display: none !important;
     }
 }
 
 .libraryDocument .dashboardMenuButton {
-    display: none;
+    display: none !important;
 }
