--- a/MediaBrowser.WebDashboard/dashboard-ui/css/site.css
+++ b/MediaBrowser.WebDashboard/dashboard-ui/css/site.css
@@ -202,6 +202,10 @@ h1 a:hover {
         display: none;
     }
 
+body:not(.enableBackButton) .headerBackButton {
+    display: none;
+}
+
 /**
  * Note: I have omitted any vendor-prefixes for clarity.
  * Adding them is left as an exercise for the reader.
