--- a/MediaBrowser.WebDashboard/dashboard-ui/css/librarymenu.css
+++ b/MediaBrowser.WebDashboard/dashboard-ui/css/librarymenu.css
@@ -8,7 +8,7 @@
 
 .libraryMenuDivider {
     height: 1px;
-    background: #282828;
+    background: #333;
     margin: .5em 0;
 }
 
@@ -196,7 +196,7 @@
     }
 
         .librarySidebarLinks a:hover {
-            background-color: #38c !important;
+            background-color: #383838 !important;
             color: #fff !important;
         }
 
@@ -208,7 +208,7 @@
 }
 
 .selectedMediaFolder {
-    background-color: #52B54B !important;
+    background-color: #3388cc !important;
     color: #fff !important;
 }
 
@@ -217,7 +217,7 @@
 }
 
 .ui-panel.ui-body-b {
-    background-color: #161616;
+    background-color: #212121;
 }
 
 .libraryViewNav .ui-btn-active {
