--- a/MediaBrowser.WebDashboard/dashboard-ui/css/site.css
+++ b/MediaBrowser.WebDashboard/dashboard-ui/css/site.css
@@ -243,6 +243,22 @@ body:not(.enableBackButton) .headerBackButton {
     left: 270px !important;
 }
 
+@media all and (min-width: 340px) {
+
+    .largePanel {
+        width: 300px;
+    }
+
+    /* Make panels larger */
+    .largePanelModalOpen.ui-panel-dismiss-position-right {
+        right: 300px !important;
+    }
+
+    .largePanelModalOpen.ui-panel-dismiss-position-left {
+        left: 300px !important;
+    }
+}
+
 
 pre, textarea.pre {
     display: block;
@@ -453,11 +469,16 @@ h1 .imageLink {
 }
 
 .sidebarLinkIcon {
-    font-size: 17px;
+    font-size: 16px;
     width: 66px;
     text-align: center;
     vertical-align: middle;
+    color: #ddd;
 }
+
+    .sidebarLinkIcon + span {
+        vertical-align: middle;
+    }
 
 .ui-page-theme-a .sidebarLinkIcon {
     color: #666;
@@ -473,8 +494,9 @@ h1 .imageLink {
 
 .sidebarHeader {
     padding-left: 20px;
-    margin: 1em 0;
+    margin: 15px 0 10px;
     font-size: 90%;
+    color: #ccc;
 }
 
 .ui-page-theme-a .sidebarHeader {
