rework notifications flyout

--- a/MediaBrowser.WebDashboard/dashboard-ui/css/librarymenu.css
+++ b/MediaBrowser.WebDashboard/dashboard-ui/css/librarymenu.css
@@ -6,10 +6,14 @@
         padding-top: 98px !important;
     }
 
-.libraryMenuDivider {
+.sidebarDivider {
     height: 1px;
     background: #333;
     margin: .5em 0;
+}
+
+.ui-page-theme-a .sidebarDivider {
+    background: #ddd !important;
 }
 
 .headerBackButton {
