add mic to header

--- a/MediaBrowser.WebDashboard/dashboard-ui/css/librarybrowser.css
+++ b/MediaBrowser.WebDashboard/dashboard-ui/css/librarybrowser.css
@@ -908,6 +908,26 @@ span.itemCommunityRating:not(:empty) + .userDataIcons {
     background: rgba(248, 58, 34, .8);
 }
 
+.syncIndicator {
+    display: block;
+    position: absolute;
+    top: 32px;
+    right: 5px;
+    text-align: center;
+    vertical-align: middle;
+    width: 24px;
+    height: 19px;
+    padding-top: 3px;
+    border-radius: 50%;
+    color: #fff;
+    background: rgba(51, 136, 204, .8);
+    line-height: 16px;
+}
+
+.syncWorkingIndicator {
+    background: rgba(255, 106, 0, .8);
+}
+
 .playedIndicator {
     display: block;
     position: absolute;
@@ -1387,7 +1407,7 @@ span.itemCommunityRating:not(:empty) + .userDataIcons {
 }
 
 .ui-page-theme-b .listItem:hover a {
-    background-color: #333 !important;
+    background-color: rgba(51,51,51,.6) !important;
 }
 
 @media all and (max-width: 600px) {
