--- a/MediaBrowser.WebDashboard/dashboard-ui/voice/voice.css
+++ b/MediaBrowser.WebDashboard/dashboard-ui/voice/voice.css
@@ -1,5 +1,5 @@
 ﻿.voiceInputHelp {
-    background-image: url(images/splash.jpg);
+    background-image: url(../css/images/splash.jpg);
     top: 50px;
     left: 0;
     right: 0;
