--- a/MediaBrowser.WebDashboard/dashboard-ui/voice/voice.css
+++ b/MediaBrowser.WebDashboard/dashboard-ui/voice/voice.css
@@ -35,7 +35,7 @@
 
     .exampleCommand .fa {
         vertical-align: middle;
-        color: #3388cc;
+        color: #38c;
     }
 
 .exampleCommandText {
