--- a/MediaBrowser.WebDashboard/dashboard-ui/css/librarybrowser.css
+++ b/MediaBrowser.WebDashboard/dashboard-ui/css/librarybrowser.css
@@ -13,7 +13,7 @@
 }
 
 .backdropPage.ui-page-theme-a {
-    background-color: rgba(240, 240,240, .86) !important;
+    background-color: rgba(240, 240,240, .90) !important;
 }
 
     .backdropPage.ui-page-theme-a:not(.lightBackdropPage) {
@@ -25,7 +25,7 @@
 }
 
 .backdropPage.ui-page-theme-b {
-    background-color: rgba(20, 20,20, .86) !important;
+    background-color: rgba(20, 20,20, .90) !important;
 }
 
     .backdropPage.ui-page-theme-b:not(.lightBackdropPage) {
@@ -64,21 +64,24 @@
 }
 
 .listHeader {
-    margin-top: 1em;
-    margin-bottom: .25em;
+    margin: .25em 0;
     padding-left: 2px;
 }
 
-.firstListHeader {
-    margin-top: 1em;
-}
+    .listHeader + paper-button {
+        margin-left: 2em;
+    }
 
 .ehsContent {
     margin: 0 auto;
 }
 
+.homePageSection {
+    margin-top: 1em;
+}
+
 .homePageSection + .homePageSection {
-    margin-top: .25em;
+    margin-top: 1.75em;
 }
 
 .sectionHeaderButton {
@@ -104,10 +107,6 @@
     .hiddenSectionOnNonMobile {
         display: none;
     }
-}
-
-.firstListHeader + .sectionHeaderButton {
-    top: 3px;
 }
 
 @media all and (min-width: 500px) {
@@ -729,7 +728,7 @@ span.itemCommunityRating:not(:empty) + .userDataIcons {
     .libraryPanelHeader span {
         color: #fff;
         vertical-align: middle;
-        font-weight: 300;
+        font-weight: 400;
     }
 
 .detailImageProgressContainer {
