added ps4 profile

--- a/MediaBrowser.WebDashboard/dashboard-ui/css/librarymenu.css
+++ b/MediaBrowser.WebDashboard/dashboard-ui/css/librarymenu.css
@@ -35,7 +35,7 @@
     display: inline-block;
 }
 
-.viewMenuBar .material-icons, .viewMenuBar .fa {
+.viewMenuBar .material-icons, .viewMenuBar .fa, .viewMenuBar paper-icon-button {
     color: #e8e8e8;
     font-size: 24px;
     vertical-align: middle;
