break up jquery mobile

--- a/MediaBrowser.WebDashboard/dashboard-ui/css/librarybrowser.css
+++ b/MediaBrowser.WebDashboard/dashboard-ui/css/librarybrowser.css
@@ -77,11 +77,11 @@
 }
 
 .homePageSection {
-    margin-top: 1em;
+    margin-top: 20px;
 }
 
 .homePageSection + .homePageSection {
-    margin-top: 1.75em;
+    margin-top: 30px;
 }
 
 .sectionHeaderButton {
